# rgbd_segmentation

./: CMakeLists.txt  README.md  package.xml  rgbd_segmentation_https.rosinstall  rgbd_segmentation_ssh.rosinstall
config/: cofusion_car.yaml  cofusion_room.yaml  default.yaml
include/rgbd_segmentation/: common.h  rgbd_segmentation.h
launch/: rgbd_segmentation.launch
src/: node.cc  rgbd_segmentation.cc
